--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
     <h1>Press (F12) to see output in console.</h1>
 
     <button class="btn">apple</button>
+
+    <button class="btn">banana</button>
 </body>
 </html>
